=== Version 0.x (2014/xx/xx) ===
* Fixed issue #2
* Refactoring

=== Version 0.1.1 (2014/10/28) ===
* Fixed issue #1
* Change the category from skin to other

=== Version 0.1 (2014/10/12) ===
* Initial release