@@ -11,7 +11,7 @@ For more information:
 
 == Requirement ==
 
-MediaWiki 1.23+ (likely to work on older versions also)
+MediaWiki 1.23+
 
 
 
